# fontplay

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
netlify/functions/: ask.ts  blend.ts  recombine.ts  splice.ts
rust/: Cargo.toml
rust/src/: lib.rs
shared/: config.ts  constants.ts  types.ts
shared/prompts/: blendPrompt.ts  recombinePrompt.ts  splicePrompt.ts  systemPrompt.ts
shared/utils/: extractSvg.ts  parseLLMResult.ts
src/: App.vue  env.d.ts  main.ts
src/components/: BlendButtons.vue  ClearButton.vue  FontBar.vue  FontUpload.vue  GlyphDisplay.vue  LetterInput.vue  MoodButtons.vue  RecombineButtons.vue  SpliceButtons.vue  StyleButtons.vue
src/composables/: useFontWasm.ts  useLLM.ts
src/stylesheets/: base.css  index.css  utilities.css
src/utils/: transformPath.ts
