[package]
name = "fontplay-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
skrifa = "0.29"
read-fonts = "0.27"
write-fonts = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
kurbo = "0.13"
woff2-no-std = "0.3"
tiny-skia = { version = "0.11", default-features = false, features = ["std"] }

[profile.release]
opt-level = "s"
lto = true
